--- a/assets/main.css
+++ b/assets/main.css
@@ -14,6 +14,7 @@
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
     min-height: 100dvh;
     background-repeat: no-repeat;
+    overflow: hidden;
   }
   h1 {
     font-size: 2rem;
